<resources>
    <string name="app_name">Groupify</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="pass_check">Re-Enter Password</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_update">Update</string>
    <string name="action_cgroup">Create Group</string>
    <string name="action_cevent">Create Event</string>
    <string name="create_gname">Enter a Group Name</string>
    <string name="create_ename">Enter an Event Name</string>
    <string name="create_gdescription">Description of the Group</string>
    <string name="create_edescription">Description of the Event</string>
    <string name="create_gcourse">What Course is this group for?</string>
    <string name="create_elocation">Enter Event Location</string>

    <string name="login_with_password">Sign In</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_join">Join Event</string>
    <string name="action_view_account">View Account</string>
    <string name="action_help">Help</string>

    <string name="home_events">Events</string>
    <string name="home_invitations">Invitations</string>
    <string name="home_notifications">Notifications</string>

    <string name="vName">Name:</string>
    <string name="vEname">Enter Your Name</string>
    <string name="vCourse">Current Courses</string>
    <string name="vEcourse">Enter Course</string>
    <string name="vProgram">Program:</string>
    <string name="vEprogram">Enter Your Program</string>
    <string name="vChecked">Checked In:</string>

    <string name="helpHeading1">System Purpose</string>
    <string name="helpHeading2">Home Page</string>
    <string name="helpHeading6">Create Event</string>
    <string name="helpHeading3">View Event</string>
    <string name="helpHeading4">Edit Profile</string>
    <string name="helpHeading5">View Friends Profile</string>

    <string name="helpParagraph1">The purpose of Groupify application is to provide university students from the University of New South Wales with a free readily available application for all android platforms. Its primary functionality revolves around creating and managing events; with a specific focus on creating study groups. The successful penetration of Groupify into student life will result in improved relationships between peers within the same course. Additionally, the increased achievements levels in regards to grades as students share their knowledge and deepen their understanding of concepts. Lastly, we encourage all users to spread the word about the application since the higher the number of users in your proximity, the more utility you gain out of the system. </string>
    <string name="helpParagraph2">The homepage consists of a scrollable newsfeed. The newsfeed includes all of the events that are being held on the UNSW campus, the details for the event are viewable by clicking on any of the events on the newsfeed. From the homepage, the user is capable of navigating to their own user profile by clicking on the user account icon. Secondly, users may navigate to either the feedback page or this manual by tapping on the ? icon. The third icon on the top right allows the user to simply logout. Fourthly, the bottom right pencil icon in pink permits users to navigate users to create an event. </string>
    <string name="helpParagraph3">Once the user has entered the view events page they have the details of said event displayed. This includes, the description of the event written by the event creator, the members that will be attending the event, the date and time the event is to be held and a scroll down map of the university that will be aligned in the centre of the screen upon tapping on the map. From this page, the user may either navigate back to the homepage by clicking the back button on the top left, or choose to join the event by hitting on the button at the bottom of the page. The final option is to tap on the usernames of attending members to view their profile. </string>
    <string name="helpParagraph4">This page displays the member’s username and email adjacent to the ranking of the user. The ranking determines their engagement levels. Additional details included in their profile consist of the name of the program plus the courses they are attempting during the semester. </string>
    <string name="helpParagraph5">This page is quite simplistic as it requires the user to enter the details of the event they wish to create. The details that must be filled out are, the event name, description of the event and the event location. The three buttons at the bottom of the page permit the user, choose a date through a pop up calendar by using the button on the left. The button on the right with the clock permits the user to choose a time with a pop up clock. The final button is just a confirmation and allows the user to create the event. </string>
    <string name="helpParagraph6">This is the page that permits the user to update their own profile. This includes the same details as in the view friend page. The only exception being that the user is permitted to edit their data and update using the button on the top right. </string>
</resources>
