<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tssssa.sgaheer.groupify.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wallpaperpurple" />

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading1"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph1"/>

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading2"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph2"/>

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading6"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph6"/>

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading3"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph3"/>

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading4"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph4"/>

            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/helpHeading5"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpParagraph5"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
