<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tssssa.sgaheer.groupify.CEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cevent_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaperpurple" />

    <ScrollView
        android:id="@+id/cevent_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/create_event_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/create_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_ename"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edescription"
                    android:maxLines="5"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/create_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_elocation"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/cevent_dateButton"
                    android:src="@drawable/ic_event_48dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/cevent_timeButton"
                    android:src="@drawable/ic_time_48dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <Button
                android:id="@+id/cevent_button"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:text="@string/action_cevent"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
