<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tssssa.sgaheer.groupify.ViewUser">

    <android.support.v7.widget.Toolbar
        android:id="@+id/vuser_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:src="@drawable/materialwallpaper" />

            <RelativeLayout
                android:id="@+id/vevent_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/vevent_toolbar">

                <LinearLayout
                    android:id="@+id/view_event_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:elevation="3dp"
                        android:paddingLeft="10dp"
                        android:src="@mipmap/ic_userimage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/view_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:scrollbars="horizontal"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/view_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="3dp"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="17sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vName"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="italic"/>

                        <EditText
                            android:id="@+id/view_user_name"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/vEname"
                            android:maxLines="1"
                            android:singleLine="true" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vProgram"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="italic"/>

                        <EditText
                            android:id="@+id/view_user_program"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/vEprogram"
                            android:maxLines="1"
                            android:singleLine="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vCourse"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="23sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="italic"/>

                    <EditText
                        android:id="@+id/view_user_course1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/vEcourse"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <EditText
                        android:id="@+id/view_user_course2"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/vEcourse"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <EditText
                        android:id="@+id/view_user_course3"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/vEcourse"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <EditText
                        android:id="@+id/view_user_course4"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/vEcourse"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
